# SNLInterpreter

./: CMakeLists.txt  README.md  global.h  main.cpp  scanner.cpp  scanner.h  util.cpp  util.h
LexicalAnalysis/: scanner.cpp  scanner.h
MidCodeGeneration/: midcode.cpp  midcode.h
SemanticAnalysis/: analyze.cpp  analyze.h  symbTable.cpp  symbTable.h
SyntaxAnalysis/: parse.cpp  parse.h  symbTable.cpp
outFile/: Tokenlist  Tokenlist.txt
testFiles/: test2.txt  test3.txt  test4.txt
